manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "boraaks-08a6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "boraaks-08a6"
  template:
    metadata:
      labels:
        app: "boraaks-08a6"
    spec:
      containers:
        - name: "boraaks-08a6"
          image: "boraregistery.azurecr.io/boraaks"
          ports:
          - containerPort: 80
