manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "boraaks-08a6"
    labels:
        app: "boraaks-08a6"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: boraaks92a5-boraaks-08a6.f951e7e13ca5440da952.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "boraaks-08a6"
                servicePort: 80
